# nseanalytics

./: .env  Dockerfile  Dockerfile.airflow  README.md  docker-compose-simple.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start-airflow.sh
airflow/dags/: bse_announcements_dag.py  test_connection.py
config/: config.yaml
dags/: bse_announcements_dag.py
data/: announcements.db
dbt_project/: docker-compose-simple.yml
dbt_project/bse_analytics/: dbt_project.yml
dbt_project/bse_analytics/models/: schema.yml
dbt_project/bse_analytics/models/analytics/: company_activity.sql  daily_announcement_summary.sql
dbt_project/bse_analytics/models/staging/: stg_announcements.sql
dbt_project/bse_analytics/profiles/: .user.yml  profiles.yml
dbt_project/dbt_project/bse_analytics/: dbt_project.yml
dbt_project/dbt_project/bse_analytics/models/: schema.yml
dbt_project/dbt_project/bse_analytics/models/analytics/: company_activity.sql  daily_announcement_summary.sql  hourly_patterns.sql
dbt_project/dbt_project/bse_analytics/models/staging/: stg_announcements.sql
dbt_project/dbt_project/bse_analytics/profiles/: profiles.yml
src/: __init__.py  config.py  downloader.py  fetcher.py  fetcher_bse.py  models.py  orchestrator.py  parser.py  scheduler.py  scraper.py  storage.py
tests/: test_parser.py
